<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/item_name"
            android:inputType="text"/>

    <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/item_description"
            android:inputType="textMultiLine"/>

    <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/item_price"
            android:inputType="numberDecimal"/>

</LinearLayout>