<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/cbDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintEnd_toStartOf="@+id/btnDelete" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" card_view:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/btnDelete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

        <Button
                android:id="@+id/btnEdit"
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/btnDelete"
                card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/tvName"
                card_view:layout_constraintEnd_toStartOf="@+id/cbDone" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/name" card_view:layout_constraintStart_toEndOf="@+id/ivIcon"
                android:layout_marginStart="8dp" tools:textSize="30sp" android:textAlignment="inherit"
                android:gravity="center"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivIcon"
                card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:srcCompat="@mipmap/ic_launcher_round" android:contentDescription="@string/icon_description"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>